--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <link rel="stylesheet" href="./css/style.css" />
     <title>Document</title>
   </head>
-  <body>
-    <div><img src="" alt=""></div>
-    <button></button>
+  <body class="dark">
+    <main class="container">
+      <div><img id="ima" class="check" src="./img/white_lamp.png" alt="" /></div>
+      <div>
+        <button onclick="fiatLux()" id="btn-primary">Accendi</button>
+      </div>
+    </main>
+
     <script src="script.js"></script>
   </body>
 </html>
